# vyconf

./: dune-project  vyconf.opam
data/: configd.proto  dune  vycall.proto  vyconf.proto  vyconfd.conf  vydispatch.proto
src/: commit.ml  commit.mli  configd_pbt.ml  configd_pbt.mli  defaults.ml  diagnose.ml  directories.ml  directories.mli  dispatch_client.ml  dune  session.ml  session.mli  startup.ml  startup.mli  test_client.ml  test_commit_data.ml  util.ml  util.mli  validate.ml  value_checker.ml  vycall_client.ml  vycall_pbt.ml  vycall_pbt.mli  vycli.ml  vyconf_client.ml  vyconf_client.mli  vyconf_client_api.ml  vyconf_client_api.mli  vyconf_client_session.ml  vyconf_client_session.mli  vyconf_config.ml  vyconf_config.mli  vyconf_pb.ml  vyconf_pb.mli  vyconf_pbt.ml  vyconf_pbt.mli  vyconf_types.ml  vyconf_types.mli  vyconfd.ml  vydispatch_pbt.ml  (+1 more)
src/adapter/: vy_delete.ml  vy_set.ml
test/: curly_parser_test.ml  dune  reference_tree_test.ml  value_checker_test.ml
test/data/vyconfd_config/: vyconfd.conf.complete  vyconfd.conf.mandatoryonly
