(library
 (name vyconf_connect)
 (modules vyconf_types vyconf_pb message)
 (libraries lwt lwt.unix lwt_log lwt_ppx ocaml-protoc fileutils ppx_deriving_yojson)
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name vyconfd_config)
 (modules vyconf_config defaults)
 (libraries vyos1x-config toml sha ppx_deriving.show)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(library
 (name client)
 (modules vyconf_client)
 (libraries vyos1x-config vyconf_connect lwt lwt.unix lwt_log lwt_ppx ocaml-protoc toml sha
            yojson ppx_deriving.show ppx_deriving_yojson)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving_yojson)))

(executable
 (name vyconfd)
 (modules vyconfd session startup version directories util)
 (libraries vyconfd_config vyconf_connect)
 (preprocess (pps lwt_ppx)))
